 -- openapi/[db]v0.0.36 - plugins have been removed.
 -- openapi/[db]v0.0.37 - tagged as deprecated.
 -- openapi/[db]v0.0.39 - forked plugin openapi/[db]v0.0.38.
 -- Add SRUN_{ERROR,INPUT,OUTPUT} input environment variables for --error,
    --input and --output options respectively.
 -- Add MaxCPUsPerSocket to partition configuration, similar to MaxCPUsPerNode.

* Changes in Slurm 22.05.3
==========================
 -- job_container/tmpfs - cleanup containers even when the .ns file isn't
    mounted anymore.
 -- Ignore the bf_licenses option if using sched/builtin.

* Changes in Slurm 22.05.2
==========================
 -- Fix a segfault in slurmctld when requesting gres in job arrays.
 -- Prevent jobs from launching on newly powered up nodes that register with
    invalid config.
 -- Fix a segfault when there's no memory.swap.current interface in cgroup/v2.
 -- Fix memleak in cgroup/v2.

* Changes in Slurm 22.05.1
==========================
 -- Flush the list of Include config files on SIGHUP.
 -- Fix and update Slurm completion script.
 -- jobacct_gather/cgroup - Add VMem support both for cgroup v1 and v2.
 -- Allow subset of node state transitions when node is in INVAL state.
 -- Remove INVAL state from cloud node after being powered down.
 -- When showing reason UID in scontrol show node, use the authenticated UID
    instead of the login UID.
 -- Fix calculation of reservation's NodeCnt when using dynamic nodes.
 -- Add SBATCH_{ERROR,INPUT,OUTPUT} input environment variables for --error,
    --input and --output options respectively.
 -- Prevent oversubscription of licenses by the backfill scheduler when not
    using the new "bf_licenses" option.
 -- Jobs with multiple nodes in a heterogeneous cluster now have access to all
    the memory on each node by using --mem=0. Previously the memory limit was
    set by the node with the least amount of memory.
 -- Don't limit the size of TaskProlog output (previously TaskProlog output was