@@ -5,6 +5,14 @@
 <h4>New plugin</h4>
 The v0.0.39 plugin forked from the v0.0.38 plugin.
 
+<h4>Change type for nice from string to integer<h4>
+<table class="tchange">
+<tr>
+	<td class="tdfield">modified value</td>
+	<td class="tdchange">.components.schemas."v0.0.39_job_properties".properties.nice</td>
+</tr>
+</table>
+
 <h3>openapi/v0.0.37 (src/plugins/openapi/v0.0.37/openapi.json)</h3>
 
 <h4>Deprecation notice</h4>
